[tool.poetry]
name = "llm_custom_functions"
version = "0.1.0"
description = "Integrating AI Models with Function Calls using Python and LangChain"
authors = ["Gonzalo Ayuso <gonzalo123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain-groq = "^0.1.5"
langchain-community = "^0.2.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
